feat: tenants crud edit flows and patch endpoints
